tdf#125925 Qt migrate KF5 theme font settings code

Currently all implemented Qt platforms use freetype and fontconfig
to handle the font selection, so just move the font styling code
from the kf5 VCL plugin to qt.

This really minimizes kf5 by just keeping the special file picker
handling in that VCL plugin.

Change-Id: I0bbb2496379396afc46e34fe0d026702dce1492e